# spheremark

./: .gitignore  AGENTS.md  LICENSE  MIGRATIONS.md  README.md  config.yaml  create_migration.py  plan-playwright-testing.md  plan.md  pyproject.toml  requirements.txt  test_coordinates.py
.github/workflows/: playwright.yml
backend/: config.py  database.py  main.py  models.py
backend/migrations/: __init__.py  migration_manager.py
backend/migrations/versions/: 001_initial_schema.py  002_add_projects.py  003_rename_uv_to_geo.py  __init__.py
backend/routes/: annotations.py  export.py  images.py  projects.py
backend/services/: annotation_service.py  export_service.py  image_service.py  project_service.py
backend/utils/: coordinates.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  main.js  main.tsx
frontend/src/api/: annotations.ts  client.js  client.ts  exports.ts  images.ts  index.ts  projects.ts
frontend/src/contexts/: AnnotationContext.tsx  ImageContext.tsx  InteractionContext.tsx  ProjectContext.tsx
frontend/src/hooks/: index.ts  useAnnotations.ts  useImages.ts  useInteraction.ts  useKeyboardShortcuts.ts  useProjects.ts
frontend/src/managers/: BoundingBoxManager.js
frontend/src/styles/: globals.css  main.css
frontend/src/types/: annotation.ts  image.ts  index.ts  interaction.ts  project.ts
frontend/styles/: main.css
tests/: test_coordinates.py  test_migration_helpers.py  test_migrations.py  test_real_migration.py
(+58 files in other folders)
